[Fix] 정상 release를 커밋 이후로 미루고 수명주기 전이를 행 잠금으로 직렬화
- ReservationHoldReleaseEvent + AFTER_COMMIT 리스너 도입: confirm·cancel·
  만료 회수의 Redis hold·alarm 정리를 DB 커밋 이후에만 실행 (롤백 시 hold 유지)
- create는 트랜잭션 동기화로 보상: 롤백 시 이번 토큰의 hold 정리,
  정상 커밋 후에만 같은 deadline으로 alarm 등록 (커밋 시점 실패까지 포괄).
  saveAndFlush로 영속성 오류를 조기에 표면화
- cancel도 findByIdForUpdate로 행 잠금 후 최신 상태 판정
- PendingExpiryProcessor 신설: 리스너·스위퍼 공통으로 예약 행을 잠그고
  최신 상태·deadline을 재검증한 뒤 회수 (confirm이 먼저 확정했으면 no-op)
- 스위퍼는 후보 ID만 조회하고 항목별 새 트랜잭션으로 처리해 일괄 잠금 회피